.jjconflict-side-0/apps/forgejo/overlays/nishir-tailnet/netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: forgejo-tailscale
spec:
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: tailscale-system
      ports:
        - port: http
        - port: ssh
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: forgejo
      app.kubernetes.io/name: forgejo
  policyTypes:
    - Ingress
